[Flink] Fix REMOTE Session JobGraph submission for Flink 1.20 SQL and uploaded JAR jobs
Fix SQL storage/decoding, upload-JAR build/submit classpath, and related
console/client/packer issues so REMOTE Session jobs reach RUNNING via
JobGraph submission. Closes #4506.

Co-authored-by: Cursor <cursoragent@cursor.com>